apps/guacamole/deployment-guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
      tier: frontend
  template:
    metadata:
      labels:
        app: guacamole
        tier: frontend
    spec:
      containers:
      - name: guacamole-app
        image: guacamole/guacamole
        imagePullPolicy: Always
        ports:
        - name: guacamole-app
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
          - name: server-xml
            mountPath: /usr/local/tomcat/conf/server.xml
            subPath: server.xml
      volumes:
      - name: server-xml
        configMap:
          name: guacamole-server
