apps/guacamole/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-db
  namespace: netboot-guacamole
  labels:
    app: guacamole-db
    tier: backend
spec:
  selector:
    matchLabels:
      app: guacamole-db
      tier: backend
  template:
    metadata:
      labels:
        app: guacamole-db
        tier: backend
    spec:
      containers:
      - image: postgres:12.5
        name: guacamole-db
        ports:
        - name: guacamole-db
          containerPort: 5432
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: "/pgdata"
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:  
          claimName: guacamole-db
