apps/guacamole/service-guacamole.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: guacamole
    namespace: guacamole
spec:
    ports:
        - name: guacamole
          port: 8080
          protocol: TCP
          targetPort: 8080
    selector:
        app: guacamole
    type: ClusterIP
