apps/guacamole/service-postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: guacamole-db
    namespace: guacamole
spec:
    ports:
        - name: postgres
          port: 5432
          protocol: TCP
          targetPort: 5432
    selector:
        app: guacamole-db
    type: ClusterIP
